gateway-api/examples/request-header-modifier.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: header-http-echo
spec:
  parentRefs:
  - name: my-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /cilium-add-a-request-header
    # filters:
    # - type: RequestHeaderModifier
    #   requestHeaderModifier:
    #     add:  # add, remove, amend
    #     - name: my-cilium-header-name
    #       value: my-cilium-header-value
    backendRefs:
      - name: echo-1
        port: 8080
