gateway-api/examples/response-header-modifier.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: response-header-modifier
spec:
  parentRefs:
  - name: my-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /multiple
    # filters:
    # - type: ResponseHeaderModifier
    #   responseHeaderModifier:
    #     add:
    #     - name: X-Header-Add-1
    #       value: header-add-1
    #     - name: X-Header-Add-2
    #       value: header-add-2
    #     - name: X-Header-Add-3
    #       value: header-add-3
    backendRefs:
    - name: echo-1
      port: 8080
